Implement basic UIs: mobile_scanner still broken

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "cSpell.words": [
+        "APPL",
+        "assetcatalog",
+        "cfbundle",
         "Cupertino",
-        "Schyler"
+        "Schyler",
+        "xcassets",
+        "xcconfig",
+        "xctest"
     ]
 }
