--- a/mobile_app/macos/Runner/Info.plist
+++ b/mobile_app/macos/Runner/Info.plist
@@ -28,5 +28,7 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSCameraUsageDescription</key>
+	<string>カメラを使用してバーコードをスキャンします</string>
 </dict>
 </plist>
