--- a/mobile_app/macos/Runner/Release.entitlements
+++ b/mobile_app/macos/Runner/Release.entitlements
@@ -4,5 +4,7 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs camera access to scan barcodes</string>
 </dict>
 </plist>
