--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -30,17 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # State Management
+  flutter_bloc: ^9.0.0
+  get_it: ^8.0.3
+
+  # Barcode Scanning
+  permission_handler: ^11.3.0
+  mobile_scanner: ^6.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mobile_scanner: ^4.0.0  # バーコードスキャン用
-  get_it: ^7.6.7         # 依存性注入用
-  flutter_bloc: ^8.1.4   # 状態管理用
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
