--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   # Barcode Scanning
   permission_handler: ^11.3.0
   mobile_scanner: ^6.0.6
+  http: ^1.2.0
+
+  equatable: ^2.0.5
+
 
 dev_dependencies:
   flutter_test:
